--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en-US">
-  <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>Iron Wolf 3D</title>
-  </head>
-  <body>
-    <script type="module">
-      import init, { WebLoader, iw_init, register_loader } from "./pkg/iw.js";
-      async function run() {
-        await init();
-        iw_init("upload");
-      }
 
-      run();
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <title>Iron Wolf 3D</title>
+</head>
+
+<body>
+    <script type="module">
+        import init, {WebLoader, iw_init} from "./pkg/iw.js";
+        async function run() {
+            await init();
+            iw_init("upload");
+        }
+        run();
     </script>
 
-  <canvas id="vga" style="border: 1px solid black;"></canvas>
-  <input id="upload" type="file" multiple />
-  </body>
+    <canvas id="vga" style="border: 1px solid black;"></canvas>
+    <input id="upload" type="file" multiple />
+</body>
+
 </html>
