web: save + load savegames

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script type="module">
-        import init, {WebLoader, iw_init} from "./pkg/iw.js";
+        import init, {iw_init} from "./pkg/iw.js";
         await init();
 
         async function run() {
